--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Edge of Magic
-description: A personal narrative, shared somewhat reluctantly.
+title: David Curtis
+description: A guy who plays drums, writes code, and thinks about things.
